# hello-catalog

./: Cargo.toml  Makefile  README.md  debug.Dockerfile  docker-compose.yaml  release.Dockerfile
nginx/: nginx.conf
resources/: put.sh
src/: handlers.rs  main.rs  model.rs
web/: Dockerfile  README.md  index.html  package-lock.json  package.json
web/nginx/: web.conf
web/src/: App.vue
web/src/router/: index.ts
web/src/views/: CatalogView.vue
